--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -56,7 +56,7 @@ body {
   .pageination {
     margin-right: 5px;
   }
-  
+
   .products-list {
     padding: 0 15px;
     .product-item {
@@ -113,5 +113,10 @@ body {
         }
       }
     }
+  }
+  .search-form {
+    padding: 0 20px 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #eee;
   }
 }
