用户界面 - 收藏商品列表

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -52,7 +52,7 @@ body {
 }
 
 
-.products-index-page {
+.products-index-page, .products-favorites-page {
   .pageination {
     margin-right: 5px;
   }
